"""
GL-016_Waterguard gRPC Services

gRPC service implementations for high-performance streaming access to the
Waterguard cooling tower optimization system. Provides real-time data streaming
and low-latency control operations.

Author: GL-APIDeveloper
Version: 1.0.0

Note: This module requires grpcio and grpcio-tools packages.
Protocol buffer definitions are included as comments for reference.
"""

from __future__ import annotations

import asyncio
import logging
import uuid
from abc import ABC, abstractmethod
from concurrent import futures
from dataclasses import dataclass, field
from datetime import datetime, timedelta
from enum import Enum
from typing import Any, AsyncIterator, Dict, Iterator, List, Optional

logger = logging.getLogger(__name__)


# =============================================================================
# Protocol Buffer Definitions (for reference)
# =============================================================================

PROTO_DEFINITION = """
syntax = "proto3";

package waterguard.v1;

option go_package = "github.com/greenlang/waterguard/api/grpc/v1";

// Water chemistry monitoring and optimization service
service WaterguardService {
    // Unary RPCs
    rpc GetChemistryState(GetChemistryStateRequest) returns (ChemistryStateResponse);
    rpc GetRecommendations(GetRecommendationsRequest) returns (RecommendationsResponse);
    rpc ApproveRecommendation(ApproveRecommendationRequest) returns (ApproveRecommendationResponse);
    rpc TriggerOptimization(TriggerOptimizationRequest) returns (OptimizationResponse);
    rpc GetBlowdownStatus(GetBlowdownStatusRequest) returns (BlowdownStatusResponse);
    rpc GetDosingStatus(GetDosingStatusRequest) returns (DosingStatusResponse);
    rpc GetComplianceStatus(GetComplianceStatusRequest) returns (ComplianceStatusResponse);
    rpc GetSavingsReport(GetSavingsReportRequest) returns (SavingsReportResponse);
    rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);

    // Server streaming RPCs
    rpc StreamChemistryUpdates(StreamChemistryRequest) returns (stream ChemistryUpdate);
    rpc StreamRecommendations(StreamRecommendationsRequest) returns (stream RecommendationEvent);
    rpc StreamAlerts(StreamAlertsRequest) returns (stream Alert);

    // Bidirectional streaming
    rpc ControlChannel(stream ControlCommand) returns (stream ControlResponse);
}

// Common types
message Timestamp {
    int64 seconds = 1;
    int32 nanos = 2;
}

enum ComplianceStatus {
    COMPLIANCE_STATUS_UNKNOWN = 0;
    COMPLIANCE_STATUS_COMPLIANT = 1;
    COMPLIANCE_STATUS_WARNING = 2;
    COMPLIANCE_STATUS_VIOLATION = 3;
}

enum RecommendationPriority {
    RECOMMENDATION_PRIORITY_UNKNOWN = 0;
    RECOMMENDATION_PRIORITY_LOW = 1;
    RECOMMENDATION_PRIORITY_MEDIUM = 2;
    RECOMMENDATION_PRIORITY_HIGH = 3;
    RECOMMENDATION_PRIORITY_CRITICAL = 4;
}

enum RecommendationStatus {
    RECOMMENDATION_STATUS_UNKNOWN = 0;
    RECOMMENDATION_STATUS_PENDING = 1;
    RECOMMENDATION_STATUS_APPROVED = 2;
    RECOMMENDATION_STATUS_REJECTED = 3;
    RECOMMENDATION_STATUS_IMPLEMENTED = 4;
    RECOMMENDATION_STATUS_EXPIRED = 5;
}

// Request/Response messages
message GetChemistryStateRequest {
    string tower_id = 1;
}

message ChemistryStateResponse {
    string tower_id = 1;
    Timestamp timestamp = 2;
    double ph = 3;
    double conductivity = 4;
    double tds = 5;
    double cycles_of_concentration = 6;
    double alkalinity = 7;
    double hardness = 8;
    double temperature = 9;
    double langelier_saturation_index = 10;
    ComplianceStatus overall_status = 11;
    repeated string parameters_out_of_spec = 12;
}

// ... additional message definitions
"""


# =============================================================================
# Data Classes (Python representations of protobuf messages)
# =============================================================================

class GrpcComplianceStatus(Enum):
    """Compliance status enum."""
    UNKNOWN = 0
    COMPLIANT = 1
    WARNING = 2
    VIOLATION = 3


class GrpcRecommendationPriority(Enum):
    """Recommendation priority enum."""
    UNKNOWN = 0
    LOW = 1
    MEDIUM = 2
    HIGH = 3
    CRITICAL = 4


class GrpcRecommendationStatus(Enum):
    """Recommendation status enum."""
    UNKNOWN = 0
    PENDING = 1
    APPROVED = 2
    REJECTED = 3
    IMPLEMENTED = 4
    EXPIRED = 5


@dataclass
class ChemistryStateMessage:
    """Chemistry state gRPC message."""
    tower_id: str
    timestamp: datetime
    ph: float
    conductivity: float
    tds: float
    cycles_of_concentration: float
    alkalinity: float
    hardness: float
    temperature: float
    langelier_saturation_index: float
    ryznar_stability_index: float
    overall_status: GrpcComplianceStatus
    parameters_out_of_spec: List[str] = field(default_factory=list)


@dataclass
class ChemistryUpdateMessage:
    """Real-time chemistry update message."""
    tower_id: str
    timestamp: datetime
    parameter: str
    value: float
    unit: str
    previous_value: Optional[float] = None
    change_percent: Optional[float] = None
    status: GrpcComplianceStatus = GrpcComplianceStatus.UNKNOWN


@dataclass
class RecommendationMessage:
    """Recommendation gRPC message."""
    recommendation_id: str
    tower_id: str
    type: str
    priority: GrpcRecommendationPriority
    status: GrpcRecommendationStatus
    title: str
    description: str
    action_required: str
    current_value: Optional[float] = None
    recommended_value: Optional[float] = None
    parameter: Optional[str] = None
    unit: Optional[str] = None
    impact_score: float = 0.0
    confidence: float = 0.0
    projected_savings: Optional[float] = None
    created_at: datetime = field(default_factory=datetime.utcnow)
    reasoning: Optional[str] = None


@dataclass
class RecommendationEventMessage:
    """Recommendation event for streaming."""
    event_type: str  # created, updated, approved, rejected
    recommendation: RecommendationMessage
    timestamp: datetime = field(default_factory=datetime.utcnow)


@dataclass
class OptimizationResultMessage:
    """Optimization result message."""
    parameter: str
    current_value: float
    recommended_value: float
    change_percent: float
    impact_score: float
    confidence: float


@dataclass
class OptimizationResponseMessage:
    """Optimization response message."""
    optimization_id: str
    tower_id: str
    timestamp: datetime
    status: str
    results: List[OptimizationResultMessage] = field(default_factory=list)
    recommended_coc: float = 0.0
    recommended_blowdown_rate: float = 0.0
    projected_water_savings_percent: float = 0.0
    projected_energy_savings_percent: float = 0.0
    execution_time_ms: float = 0.0
    model_version: str = ""


@dataclass
class BlowdownStatusMessage:
    """Blowdown status message."""
    tower_id: str
    timestamp: datetime
    blowdown_active: bool
    current_rate_gpm: float
    target_rate_gpm: float
    current_coc: float
    target_coc: float
    coc_deviation: float
    total_blowdown_today_gallons: float
    blowdown_events_today: int
    conductivity_setpoint: float
    valve_position_percent: float
    valve_status: str


@dataclass
class DosingChannelMessage:
    """Dosing channel message."""
    channel_id: str
    chemical_type: str
    chemical_name: str
    active: bool
    current_rate_ml_hr: float
    target_rate_ml_hr: float
    tank_level_percent: float
    estimated_days_remaining: float
    pump_status: str


@dataclass
class DosingStatusMessage:
    """Dosing status message."""
    tower_id: str
    timestamp: datetime
    system_status: str
    active_channels: int
    total_channels: int
    channels: List[DosingChannelMessage] = field(default_factory=list)
    low_chemical_alerts: List[str] = field(default_factory=list)
    daily_chemical_cost: float = 0.0


@dataclass
class AlertMessage:
    """Alert message for streaming."""
    alert_id: str
    tower_id: str
    timestamp: datetime
    severity: str  # info, warning, critical
    category: str  # chemistry, blowdown, dosing, compliance
    title: str
    message: str
    acknowledged: bool = False


@dataclass
class ControlCommandMessage:
    """Control command for bidirectional streaming."""
    command_id: str
    tower_id: str
    command_type: str  # set_blowdown, set_dosing, set_mode
    parameters: Dict[str, Any] = field(default_factory=dict)
    timestamp: datetime = field(default_factory=datetime.utcnow)


@dataclass
class ControlResponseMessage:
    """Control response for bidirectional streaming."""
    command_id: str
    success: bool
    message: str
    timestamp: datetime = field(default_factory=datetime.utcnow)


@dataclass
class HealthCheckMessage:
    """Health check response message."""
    status: str
    version: str
    uptime_seconds: float
    timestamp: datetime = field(default_factory=datetime.utcnow)


# =============================================================================
# Service Interface
# =============================================================================

class WaterguardServiceInterface(ABC):
    """
    Abstract interface for the Waterguard gRPC service.

    Implementations must provide all methods for both unary and streaming RPCs.
    """

    # Unary RPCs
    @abstractmethod
    async def get_chemistry_state(self, tower_id: str) -> ChemistryStateMessage:
        """Get current chemistry state."""
        pass

    @abstractmethod
    async def get_recommendations(
        self,
        tower_id: str,
        status_filter: Optional[GrpcRecommendationStatus] = None,
        limit: int = 20,
    ) -> List[RecommendationMessage]:
        """Get recommendations for a tower."""
        pass

    @abstractmethod
    async def approve_recommendation(
        self,
        recommendation_id: str,
        approved: bool,
        operator_notes: Optional[str] = None,
    ) -> RecommendationMessage:
        """Approve or reject a recommendation."""
        pass

    @abstractmethod
    async def trigger_optimization(
        self,
        tower_id: str,
        operating_mode: str = "normal",
        force: bool = False,
    ) -> OptimizationResponseMessage:
        """Trigger optimization cycle."""
        pass

    @abstractmethod
    async def get_blowdown_status(self, tower_id: str) -> BlowdownStatusMessage:
        """Get blowdown status."""
        pass

    @abstractmethod
    async def get_dosing_status(self, tower_id: str) -> DosingStatusMessage:
        """Get dosing status."""
        pass

    @abstractmethod
    async def health_check(self) -> HealthCheckMessage:
        """Health check."""
        pass

    # Streaming RPCs
    @abstractmethod
    async def stream_chemistry_updates(
        self,
        tower_id: str,
        parameters: Optional[List[str]] = None,
    ) -> AsyncIterator[ChemistryUpdateMessage]:
        """Stream real-time chemistry updates."""
        pass

    @abstractmethod
    async def stream_recommendations(
        self,
        tower_id: str,
    ) -> AsyncIterator[RecommendationEventMessage]:
        """Stream recommendation events."""
        pass

    @abstractmethod
    async def stream_alerts(
        self,
        tower_id: str,
        severity_filter: Optional[str] = None,
    ) -> AsyncIterator[AlertMessage]:
        """Stream alerts."""
        pass


# =============================================================================
# Service Implementation
# =============================================================================

class WaterguardServiceImpl(WaterguardServiceInterface):
    """
    Implementation of the Waterguard gRPC service.

    Provides all gRPC methods for the cooling tower optimization system.
    """

    def __init__(self):
        """Initialize the service."""
        self._start_time = datetime.utcnow()
        self._active_streams: Dict[str, bool] = {}

    async def get_chemistry_state(self, tower_id: str) -> ChemistryStateMessage:
        """Get current chemistry state for a tower."""
        logger.info(f"gRPC: GetChemistryState for {tower_id}")

        return ChemistryStateMessage(
            tower_id=tower_id,
            timestamp=datetime.utcnow(),
            ph=7.8,
            conductivity=1500.0,
            tds=1200.0,
            cycles_of_concentration=4.5,
            alkalinity=120.0,
            hardness=200.0,
            temperature=32.5,
            langelier_saturation_index=0.5,
            ryznar_stability_index=6.5,
            overall_status=GrpcComplianceStatus.COMPLIANT,
            parameters_out_of_spec=[],
        )

    async def get_recommendations(
        self,
        tower_id: str,
        status_filter: Optional[GrpcRecommendationStatus] = None,
        limit: int = 20,
    ) -> List[RecommendationMessage]:
        """Get recommendations for a tower."""
        logger.info(f"gRPC: GetRecommendations for {tower_id}")

        recommendations = [
            RecommendationMessage(
                recommendation_id="rec-001",
                tower_id=tower_id,
                type="blowdown_adjustment",
                priority=GrpcRecommendationPriority.MEDIUM,
                status=GrpcRecommendationStatus.PENDING,
                title="Increase Blowdown Rate",
                description="Conductivity trending high.",
                action_required="Increase blowdown rate from 10 gpm to 12.5 gpm",
                current_value=10.0,
                recommended_value=12.5,
                parameter="blowdown_rate",
                unit="gpm",
                impact_score=75.0,
                confidence=0.92,
                projected_savings=500.0,
                reasoning="Based on 24-hour conductivity trend.",
            ),
        ]

        if status_filter:
            recommendations = [r for r in recommendations if r.status == status_filter]

        return recommendations[:limit]

    async def approve_recommendation(
        self,
        recommendation_id: str,
        approved: bool,
        operator_notes: Optional[str] = None,
    ) -> RecommendationMessage:
        """Approve or reject a recommendation."""
        logger.info(
            f"gRPC: ApproveRecommendation {recommendation_id} "
            f"{'approved' if approved else 'rejected'}"
        )

        return RecommendationMessage(
            recommendation_id=recommendation_id,
            tower_id="tower-001",
            type="blowdown_adjustment",
            priority=GrpcRecommendationPriority.MEDIUM,
            status=GrpcRecommendationStatus.APPROVED if approved else GrpcRecommendationStatus.REJECTED,
            title="Increase Blowdown Rate",
            description="Conductivity trending high.",
            action_required="Increase blowdown rate from 10 gpm to 12.5 gpm",
        )

    async def trigger_optimization(
        self,
        tower_id: str,
        operating_mode: str = "normal",
        force: bool = False,
    ) -> OptimizationResponseMessage:
        """Trigger optimization cycle."""
        logger.info(f"gRPC: TriggerOptimization for {tower_id}")

        optimization_id = f"opt-{datetime.utcnow().strftime('%Y%m%d')}-{uuid.uuid4().hex[:8]}"

        return OptimizationResponseMessage(
            optimization_id=optimization_id,
            tower_id=tower_id,
            timestamp=datetime.utcnow(),
            status="completed",
            results=[
                OptimizationResultMessage(
                    parameter="cycles_of_concentration",
                    current_value=4.5,
                    recommended_value=5.2,
                    change_percent=15.6,
                    impact_score=85.0,
                    confidence=0.94,
                ),
            ],
            recommended_coc=5.2,
            recommended_blowdown_rate=10.5,
            projected_water_savings_percent=15.0,
            projected_energy_savings_percent=8.0,
            execution_time_ms=245.5,
            model_version="v2.1.0",
        )

    async def get_blowdown_status(self, tower_id: str) -> BlowdownStatusMessage:
        """Get blowdown status."""
        logger.info(f"gRPC: GetBlowdownStatus for {tower_id}")

        return BlowdownStatusMessage(
            tower_id=tower_id,
            timestamp=datetime.utcnow(),
            blowdown_active=True,
            current_rate_gpm=12.5,
            target_rate_gpm=12.5,
            current_coc=4.8,
            target_coc=5.0,
            coc_deviation=-0.2,
            total_blowdown_today_gallons=1500.0,
            blowdown_events_today=8,
            conductivity_setpoint=1500.0,
            valve_position_percent=25.0,
            valve_status="modulating",
        )

    async def get_dosing_status(self, tower_id: str) -> DosingStatusMessage:
        """Get dosing status."""
        logger.info(f"gRPC: GetDosingStatus for {tower_id}")

        channels = [
            DosingChannelMessage(
                channel_id="ch-01",
                chemical_type="scale_inhibitor",
                chemical_name="ScaleGuard Pro",
                active=True,
                current_rate_ml_hr=2.5,
                target_rate_ml_hr=2.5,
                tank_level_percent=75.0,
                estimated_days_remaining=30.0,
                pump_status="running",
            ),
        ]

        return DosingStatusMessage(
            tower_id=tower_id,
            timestamp=datetime.utcnow(),
            system_status="operational",
            active_channels=3,
            total_channels=4,
            channels=channels,
            low_chemical_alerts=[],
            daily_chemical_cost=45.50,
        )

    async def health_check(self) -> HealthCheckMessage:
        """Health check."""
        uptime = (datetime.utcnow() - self._start_time).total_seconds()

        return HealthCheckMessage(
            status="healthy",
            version="1.0.0",
            uptime_seconds=uptime,
        )

    async def stream_chemistry_updates(
        self,
        tower_id: str,
        parameters: Optional[List[str]] = None,
    ) -> AsyncIterator[ChemistryUpdateMessage]:
        """Stream real-time chemistry updates."""
        logger.info(f"gRPC: StreamChemistryUpdates started for {tower_id}")

        stream_id = str(uuid.uuid4())
        self._active_streams[stream_id] = True

        import random

        base_values = {
            "pH": 7.8,
            "conductivity": 1500.0,
            "tds": 1200.0,
            "temperature": 32.5,
        }

        params_to_monitor = parameters or list(base_values.keys())

        try:
            while self._active_streams.get(stream_id, False):
                await asyncio.sleep(2)  # Update every 2 seconds

                param = random.choice(params_to_monitor)
                base_value = base_values.get(param, 100.0)
                new_value = base_value * (1 + random.uniform(-0.02, 0.02))
                change = ((new_value - base_value) / base_value) * 100

                yield ChemistryUpdateMessage(
                    tower_id=tower_id,
                    timestamp=datetime.utcnow(),
                    parameter=param,
                    value=round(new_value, 2),
                    unit="pH" if param == "pH" else ("uS/cm" if param == "conductivity" else "ppm"),
                    previous_value=base_value,
                    change_percent=round(change, 2),
                    status=GrpcComplianceStatus.COMPLIANT,
                )

        finally:
            del self._active_streams[stream_id]
            logger.info(f"gRPC: StreamChemistryUpdates ended for {tower_id}")

    async def stream_recommendations(
        self,
        tower_id: str,
    ) -> AsyncIterator[RecommendationEventMessage]:
        """Stream recommendation events."""
        logger.info(f"gRPC: StreamRecommendations started for {tower_id}")

        stream_id = str(uuid.uuid4())
        self._active_streams[stream_id] = True

        try:
            while self._active_streams.get(stream_id, False):
                await asyncio.sleep(30)  # Recommendations less frequent

                import random

                event_types = ["created", "updated", "approved"]

                recommendation = RecommendationMessage(
                    recommendation_id=f"rec-{uuid.uuid4().hex[:8]}",
                    tower_id=tower_id,
                    type="blowdown_adjustment",
                    priority=GrpcRecommendationPriority.MEDIUM,
                    status=GrpcRecommendationStatus.PENDING,
                    title="Sample Recommendation",
                    description="This is a sample recommendation.",
                    action_required="Take action",
                )

                yield RecommendationEventMessage(
                    event_type=random.choice(event_types),
                    recommendation=recommendation,
                )

        finally:
            del self._active_streams[stream_id]
            logger.info(f"gRPC: StreamRecommendations ended for {tower_id}")

    async def stream_alerts(
        self,
        tower_id: str,
        severity_filter: Optional[str] = None,
    ) -> AsyncIterator[AlertMessage]:
        """Stream alerts."""
        logger.info(f"gRPC: StreamAlerts started for {tower_id}")

        stream_id = str(uuid.uuid4())
        self._active_streams[stream_id] = True

        try:
            while self._active_streams.get(stream_id, False):
                await asyncio.sleep(60)  # Alerts less frequent

                import random

                severities = ["info", "warning", "critical"]
                if severity_filter:
                    severities = [severity_filter]

                yield AlertMessage(
                    alert_id=f"alert-{uuid.uuid4().hex[:8]}",
                    tower_id=tower_id,
                    timestamp=datetime.utcnow(),
                    severity=random.choice(severities),
                    category="chemistry",
                    title="Sample Alert",
                    message="This is a sample alert message.",
                    acknowledged=False,
                )

        finally:
            del self._active_streams[stream_id]
            logger.info(f"gRPC: StreamAlerts ended for {tower_id}")

    async def control_channel(
        self,
        commands: AsyncIterator[ControlCommandMessage],
    ) -> AsyncIterator[ControlResponseMessage]:
        """
        Bidirectional streaming control channel.

        Receives control commands and sends responses.
        """
        logger.info("gRPC: ControlChannel started")

        async for command in commands:
            logger.info(f"gRPC: Received command {command.command_type}")

            # Process command
            success = True
            message = f"Command {command.command_type} executed successfully"

            # Simulate command processing
            await asyncio.sleep(0.1)

            yield ControlResponseMessage(
                command_id=command.command_id,
                success=success,
                message=message,
            )

        logger.info("gRPC: ControlChannel ended")

    def stop_stream(self, stream_id: str) -> None:
        """Stop a specific stream."""
        if stream_id in self._active_streams:
            self._active_streams[stream_id] = False

    def stop_all_streams(self) -> None:
        """Stop all active streams."""
        for stream_id in self._active_streams:
            self._active_streams[stream_id] = False


# =============================================================================
# gRPC Server Setup (Requires grpcio)
# =============================================================================

def create_grpc_server(
    host: str = "0.0.0.0",
    port: int = 50051,
    max_workers: int = 10,
) -> Any:
    """
    Create and configure the gRPC server.

    Note: This requires grpcio to be installed and proto files compiled.

    Args:
        host: Server host address
        port: Server port
        max_workers: Maximum worker threads

    Returns:
        Configured gRPC server (or None if grpcio not available)
    """
    try:
        import grpc
        from grpc import aio

        # In production, import the generated protobuf modules
        # from waterguard.v1 import waterguard_pb2, waterguard_pb2_grpc

        logger.info(f"gRPC server would start on {host}:{port}")
        logger.info(f"Max workers: {max_workers}")

        # Create service implementation
        service = WaterguardServiceImpl()

        # In production:
        # server = aio.server()
        # waterguard_pb2_grpc.add_WaterguardServiceServicer_to_server(service, server)
        # server.add_insecure_port(f"{host}:{port}")
        # return server

        return service

    except ImportError:
        logger.warning("grpcio not installed. gRPC server not available.")
        return None


async def serve_grpc(server: Any) -> None:
    """
    Start the gRPC server.

    Args:
        server: gRPC server instance
    """
    if server is None:
        logger.warning("No gRPC server to start")
        return

    try:
        import grpc
        from grpc import aio

        # In production:
        # await server.start()
        # await server.wait_for_termination()

        logger.info("gRPC server would be running...")

    except ImportError:
        logger.warning("grpcio not installed")


# =============================================================================
# Service Instance
# =============================================================================

# Global service instance
_service: Optional[WaterguardServiceImpl] = None


def get_grpc_service() -> WaterguardServiceImpl:
    """Get or create the gRPC service instance."""
    global _service
    if _service is None:
        _service = WaterguardServiceImpl()
    return _service
